Append role in the jwt and the function for extract this, create the login.html page and addapt the code for all the modifications