@@ -2,6 +2,7 @@ package com.poseidon.app.security;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
@@ -12,6 +13,8 @@ import java.io.IOException;
 import java.lang.reflect.Array;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
+
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.Cookie;
@@ -34,13 +37,19 @@ public class JwtAuthFilter extends OncePerRequestFilter{
         //if (header != null && header.startsWith("Bearer ")) {
         //    String token = header.substring(7);
         String token = extractCookie(request, "JWT_TOKEN");
-        
+                
         if (token != null && jwtService.validateToken(token)) {
                 String username = jwtService.extractUsername(token);
+                String role = jwtService.extractRole(token);
+                System.out.println("role : " + jwtService.extractRole(token));
+                if (role == null || role.isBlank()) {
+                    role = "ROLE_AUCUN";
+                }
+                
                 UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                        new User(username, "", Collections.emptyList()),
+                        new User(username, "", List.of(new SimpleGrantedAuthority(role))),
                         null,
-                        Collections.emptyList()
+                        List.of(new SimpleGrantedAuthority(role))
                 );
                 auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                 SecurityContextHolder.getContext().setAuthentication(auth);
